--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "homepage": "https://github.com/anubhabsen/raphaelai#readme",
   "dependencies": {
-    "eslint": "^3.2.2"
+    "eslint": "^3.2.2",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "jade": "^1.11.0",
+    "pb-node": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "jade": "^1.11.0",
-    "pb-node": "^2.0.1",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
