Adds pug to node modules, bot dependencies

--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/anubhabsen/raphaelai#readme",
   "dependencies": {
-    "eslint": "^3.2.2",
     "body-parser": "^1.15.0",
+    "eslint": "^3.2.2",
     "express": "^4.13.4",
     "jade": "^1.11.0",
-    "pb-node": "^2.0.1"
+    "pb-node": "^2.0.1",
+    "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
     "eslint": "^3.2.2",
