--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "jstransformer": "^1.0.0",
+    "leveldown": "^1.5.0",
+    "levelup": "^1.3.3",
     "pb-node": "^2.0.1",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "time": "^0.11.4"
   },
   "devDependencies": {
     "eslint": "^3.2.2",
