Separate DB to extract email ids

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/anubhabsen/raphaelai#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "email-validator": "^1.0.7",
     "eslint": "^3.2.2",
     "express": "^4.13.4",
     "jade": "^1.11.0",
