--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^3.2.2",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
+    "gulp-pretty-data": "^0.1.1",
     "jade": "^1.11.0",
     "jstransformer": "^1.0.0",
     "leveldown": "^1.5.0",
